--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -4,20 +4,27 @@
     
   }
 
+//  *{
+//      border-style: solid;
+//      border-width: 3px;
+//      border-color: coral;
+//  }
+
 body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
 }
 
-main {
-    flex: 2;
-}
+// main {
+//     // flex: 2;
+//     width: 100%;
+// }
 
-section {
-    max-width: 800px;
-    margin: 8px;
-}
+// section {
+//     max-width: 800px;
+//     margin: 8px;
+// }
 
 label {
     font-size: 12px;
