--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -6,12 +6,12 @@
         <meta name="description" content="FEND CAPSTONE PROJECT">
         <meta name="author" content="Nikos">
 
-        <link rel="stylesheet" href="../styles/resets.scss?v=1.0">
+        <!-- <link rel="stylesheet" href="../styles/resets.scss?v=1.0">
         <link rel="stylesheet" href="../styles/base.scss?v=1.0">
         <link rel="stylesheet" href="../styles/header.scss?v=1.0">
         <link rel="stylesheet" href="../styles/form.scss?v=1.0">
         <link rel="stylesheet" href="../styles/footer.scss?v=1.0">
-        <link rel="stylesheet" href="../styles/main.scss?v=1.0">
+        <link rel="stylesheet" href="../styles/main.scss?v=1.0"> -->
     </head>
 
     <body>
@@ -52,12 +52,12 @@
 
             <div class="pi" id="pixabay">
               <!-- <div id="pixabay" class="px" style="background-image: url('../images/socrates.jpg');"> -->
-                <img src="/images/socrates.jpg" alt="socrates" >
+                <img id="socrates" alt="socrates" >
             </div>
 
             <div class="we" id="weatherbit">
                 <!-- <img src="../images/socrates.jpg" alt="socrates" width="400" height="400"> -->
-                <img src="./images/socrates.jpg" alt="socrates" width="300">
+                <img id="socrates2" alt="socrates" width="300">
              </div>
 
             <div class="ge">
