--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -91,20 +91,20 @@
                   <div id="b14"></div>
                   <div id="b15"></div>
                   <div id="c1"> <img id="c1img" > </div>
-                  <div id="c2"><img id="c2img" src="../images/placeholdericon.png" ></div>
-                  <div id="c3"><img id="c3img" src="../images/placeholdericon.png" ></div>
-                  <div id="c4"><img id="c4img" src="../images/placeholdericon.png" ></div>
-                  <div id="c5"><img id="c5img" src="../images/placeholdericon.png" ></div>
-                  <div id="c6"><img id="c6img" src="../images/placeholdericon.png" ></div>
-                  <div id="c7"><img id="c7img" src="../images/placeholdericon.png" ></div>
-                  <div id="c8"><img id="c8img" src="../images/placeholdericon.png" ></div>
-                  <div id="c9"><img id="c9img" src="../images/placeholdericon.png" ></div>
-                  <div id="c10"><img id="c10img" src="../images/placeholdericon.png" ></div>
-                  <div id="c11"><img id="c11img" src="../images/placeholdericon.png" ></div>
-                  <div id="c12"><img id="c12img" src="../images/placeholdericon.png" ></div>
-                  <div id="c13"><img id="c13img" src="../images/placeholdericon.png" ></div>
-                  <div id="c14"><img id="c14img" src="../images/placeholdericon.png" ></div>
-                  <div id="c15"><img id="c15img" src="../images/placeholdericon.png" ></div>
+                  <div id="c2"><img id="c2img"  ></div>
+                  <div id="c3"><img id="c3img"  ></div>
+                  <div id="c4"><img id="c4img"  ></div>
+                  <div id="c5"><img id="c5img"  ></div>
+                  <div id="c6"><img id="c6img"  ></div>
+                  <div id="c7"><img id="c7img"  ></div>
+                  <div id="c8"><img id="c8img"  ></div>
+                  <div id="c9"><img id="c9img"  ></div>
+                  <div id="c10"><img id="c10img"  ></div>
+                  <div id="c11"><img id="c11img"  ></div>
+                  <div id="c12"><img id="c12img"  ></div>
+                  <div id="c13"><img id="c13img"  ></div>
+                  <div id="c14"><img id="c14img"  ></div>
+                  <div id="c15"><img id="c15img"  ></div>
                   <div id="d1"></div>
                   <div id="d2"></div>
                   <div id="d3"></div>
