--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -14,22 +14,22 @@
         <link rel="stylesheet" href="../styles/main.scss?v=1.0"> -->
     </head>
 
-    <body>
+    <body class="scrollable">
 
         <header>
             <div class="logo">
                 Travel App
             </div>
-            <div class="navMenu">
+            <!-- <div class="navMenu">
                 <a class="active" href="#home">Home</a>
                 <a href="#news">News</a>
                 <a href="#contact">Contact</a>
                 <a href="#about">About</a>
-            </div>
+            </div> -->
         </header>
 
-        <main>
-
+        <main class="scrollable">
+           
             <div class="ud" id="userData">
               <form class="userDataForm" onsubmit="return Client.handleSubmit(event)">
                 <div id="destination">
@@ -52,14 +52,20 @@
 
             <div class="pi" id="pixabay">
               <!-- <div id="pixabay" class="px" style="background-image: url('../images/socrates.jpg');"> -->
-                <img id="pixabayImg" >
-                <img id="pixabayImg2" >
-                <div id="results"></div>
+                <img class="im" id="pixabayImg" >
+                <img class="fl" id="pixabayImg2" >
+                <div class="ge" id="geonames">
+                    <label id="lon"> </label>
+                    <label id="lat"> </label>
+                    <label id="cit"> </label>
+                    <label id="cou"> </label>
+                </div>
+                <div class="re" id="results" ></div>
             </div>
 
             <div class="we" id="weatherbit">
                 <!-- start weathergrid -->
-                <div class="grid-container" id="gridContainer">
+                <div class="grid-container" class="scrollable" id="gridContainer">
                   <div id="a1"></div>
                   <div id="a2"></div>
                   <div id="a3"></div>
@@ -125,15 +131,9 @@
                 <!-- ends weathergrid -->
              </div>
 
-            <div class="ge" id="geonames">
-                <label id="lon"> </label>
-                <label id="lat"> </label>
-                <label id="cit"> </label>
-                <label id="cou"> </label>
-            </div>
 
-            <div class="re" >
-            </div>
+
+
 
         </main>
 
