--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -26,6 +26,9 @@ body {
       #pixabayImg2{
           display: none;
       }
+      #geonames{
+          display: none;
+      }
     }
 
 // main {
