--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -88,4 +88,20 @@ main * {
 
       .j-first-timer{
         height: 50px;
+        border-style: solid;
+        border-width: 1px;
+        border-radius: 4px;
+        border-color: red($color: #f00); ;
+      }
+      .timer {
+        font-size: small;
+      }
+      
+      .timer span {
+        color: #555;
+      }
+      
+      .timer i {
+        color: #bbb;
+        font-size: smaller;
       }
