--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -3,105 +3,61 @@ main{
   flex-direction: column;
   padding-right: 8px;
 }
-
 #row1{
   display: flex;
   flex-direction: row;
   padding-right: 8px;
 }
-// main {
-//     display: grid;
-//     grid-template-columns: 1fr 3.5fr;
-//     grid-template-rows: 1fr 1fr ;
-//     gap: 1px 1px;
-//     grid-template-areas: "ud pi" "we we" ;
-//     padding: 8px;
-//   }
-  
-//   .ud { grid-area: ud; }
-
-//   .pi { grid-area: pi; }
-
-//   // .ge { grid-area: ge; }
-
-//   .we { grid-area: we; }
-  
-//   .re { grid-area: re; 
-
-// }
-
-/* for debugging */
 main * {
-// //     // border: 1px solid #545454;
-// //     // border-radius: 3px;
-     padding: 8px;
-// // overflow: hidden;
+ /* for debugging border: 1px solid #545454;
+  border-radius: 3px;
+ */
+  padding: 8px;
 }
-
-  #userDataForm{
-    grid-area: ud;
-    width: 200px;
-    }
-
-    // #pixabay{
-    //     max-height: 400px;
-    //     display: flex;
-    //     flex-direction: row;
-    //     align-content: space-between;
-    // }
-
-    #weatherbit{
-        // width: 100%;
-        display: inline-block;
-    }
-
-    #geonames{
-        display: flex;
-        flex-direction: row;
-        // line-height: 50%;
-        font-size: small;
-        margin-top: 4px;
-    }
-    #geonames label{
-        font-size: small;
-        // margin-top: 8px;
-        // margin-bottom: 8px;
-    }
-
-    #info{
-      margin-right: 8px;
-    }
-    img {
-        display: block;
-        max-width: 300px;
-        // width: 100vw;
-        // height: 100vh;
-        object-fit: contain;
-      }
-
-      #results{
-        font-size: small;
-        vertical-align: middle;
-        // line-height: 50%;
-        margin-top: 4px;
-      }
-
-      .j-first-timer{
-        height: 50px;
-        border-style: solid;
-        border-width: 1px;
-        border-radius: 4px;
-        border-color: red($color: #f00); ;
-      }
-      .timer {
-        font-size: small;
-      }
-      
-      .timer span {
-        color: #555;
-      }
-      
-      .timer i {
-        color: #bbb;
-        font-size: smaller;
-      }
+#userDataForm{
+  grid-area: ud;
+  width: 200px;
+}
+#weatherbit{
+  display: inline-block;
+}
+#geonames{
+  display: flex;
+  flex-direction: row;
+  font-size: small;
+  margin-top: 4px;
+}
+#geonames label{
+  font-size: small;
+}
+#info{
+  margin-right: 8px;
+}
+img {
+  display: block;
+  max-width: 300px;
+  object-fit: contain;
+}
+#results{
+  font-size: small;
+  vertical-align: middle;
+  margin-top: 4px;
+}
+.j-first-timer{
+  height: 50px;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 4px;
+  border-color: red($color: #f00);
+  ;
+}
+.timer {
+  font-size: small;
+}
+.timer span {
+  color: #555;
+}
+.timer i {
+  color: #bbb;
+  font-size: smaller;
+}
